# mhtab

./: .gitignore  LICENSE  README.md  _cm.tmp
.github/workflows/: build.yml
rebuild/: .gitignore  CMakeLists.txt  README.md
rebuild/child/: CMakeLists.txt  demo_child.cpp
rebuild/docs/mhtabx/: DESIGN.md
rebuild/include/: ChildProcessManager.h  HeartbeatMonitor.h  IpcProtocol.h  MainFrame.h  SessionStore.h  SettingsDialog.h  TabController.h  Theme.h  Utils.h  common.h
rebuild/src/: ChildProcessManager.cpp  HeartbeatMonitor.cpp  MainFrame.cpp  SessionStore.cpp  SettingsDialog.cpp  TabController.cpp  Theme.cpp  Utils.cpp  main.cpp
rebuild/src/resource/: app.rc  resource.h
reverse/docs/mhtab_reverse/: ACCEPTANCE_mhtab_reverse.md  ALIGNMENT_mhtab_reverse.md  DESIGN_mhtab_reverse.md  FINAL_mhtab_reverse.md  TODO_mhtab_reverse.md
reverse/src/: Dispatch.cpp  MainFrame.cpp  NOTES.md  README.md  RookieTip.cpp  TabCtrlApp.cpp  TabCtrlApp_methods.cpp  TabsList.cpp  Util.c  View.cpp  main.c
reverse/src/include/: globals.h  types.h
